--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/barry/source/repos/Application_Meteo_3D_VR/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/barry/OneDrive/Bureau/build/Meteo VR_Data;C:/Users/barry/OneDrive/Bureau/build/aaa;C:/Users/barry/source/repos/Application_Meteo_3D_VR/WebGL Builds;;;;;;;\"}"
             }
         ]
     }
